# codigo_facilito_downloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  autorun.sh  bootcamp.py  bulk-downloader.py  coco.py  cookies.py  downloader.py  facilito.py  pyproject.toml  requirements.txt  up.ts  utils.py
.github/: copilot-instructions.md  git-commit-messages-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
src/: api.py
src/errors/: __init__.py
src/facilito/: __init__.py  api.py  async_api.py  cli.py  constants.py  consts.py  core.py  errors.py  helpers.py  logger.py  models.py  utils.py
src/facilito/collectors/: __init__.py  bootcamp.py  course.py  helpers.py  unit.py  video.py
src/facilito/downloaders/: __init__.py  bootcamp.py  course.py  unit.py  video.py
src/facilito/models/: account.py  bootcamp.py  course.py  download.py  video.py
src/facilito/utils/: collectors.py  expanders.py  logger.py
src/models/: video.py
src/tests/: test_helpers.py
src/utils/: collectors.py  expanders.py
test/: conftest.py  test_video.py
