[tool.poetry]
name = "facilito"
version = "0.5.0"
description = "simple api to scrape data from codigo facilito"
authors = ["ivansaul"]
readme = "README.md"
packages = [{include = "facilito", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.41.1"
yt-dlp = "^2023.12.30"
pydantic = "^2.6.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.6.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
